# anastasia

./: .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  anastasia.cfg  fly.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: fly.yml  python-package.yml  test-and-deploy.yml
anastasia/: __about__.py  __init__.py  __main__.py  cli.py  config.py  config.yml  configuration.py  configuration.yml  settings.py  webapp.py
anastasia/routers/: __init__.py  v3_0.py
anastasia/templates/: index.html
anastasia/templates/dadjokes/: index.html
anastasia/templates/minimal/: index.html
anastasia/templates/regular/: index.html
contrib/: anastasia.wsgi
tests/: test_webapp.py
