[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "anastasia"
version = "1.0.4"
description = ""
authors = ["Marco Marzetti <marco@lamehost.it>"]
readme = "README.md"
packages = [{include = "anastasia"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.38.0"
fastapi = "^0.120.1"
email-validator = "^2.2.0"
python-dotenv = "^1.0.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.20"
starlette = "^0.49.1"
pydantic-core = "^2.37.2"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^4.0.2"
coverage = "^7.10.1"
flake8 = "^7.1.1"
requests = "^2.32.4"
black = "^25.1.0"
bandit = "^1.7.7"
httpx = "^0.28.1"
isort = "^7.0.0"

[tool.poetry.scripts]
anastasia = "anastasia.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
